# rvc2api

./: .eslintrc.json  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  flake.nix  pyproject-old.toml  pyproject.toml  pyrightconfig.json  release-please-config.json  renovate.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions-backup.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/instructions/: README.md  code-style.instructions.md  dev-environment.instructions.md  env-vars.instructions.md  mcp-tools.instructions.md  project-overview.instructions.md  pull-requests.instructions.md  react-frontend.instructions.md  testing.instructions.md  webui.instructions.md
.github/prompts/: README.md  architectural-decision.md  code-refactoring.prompt.md  feature-implementation.md  feature-planning.md  new-service-spec.prompt.md  protocol-research.prompt.md  react-ui-prototype.prompt.md  rvc-integration.prompt.md  service-documentation.md
.github/scripts/: check_nixpkgs_versions.py
.github/workflows/: frontend.yml  nix-ci.yml  nixpkgs-version-check.yml  python-ci.yml  release-please.yml
_backups/: app.py  index-original.html
docs/: code-quality-tools.md  development-environments.md  enhanced-dev-environment.md  environment-variable-integration.md  frontend-development.md  mcp-tools-setup.md  nixos-integration.md  nixos-module.md  poetry2nix-integration.md  pre-commit-and-actions.md  pyright-type-checking.md  react-deployment.md  vscode-extensions.md
docs/specs/: refactor-web-ui-to-react.md
scripts/: __init__.py  build-frontend.sh  build_frontend.py
src/common/: __init__.py  models.py
src/core_daemon/: __init__.py  _version.py  app.py  app_state.py  can_manager.py  can_processing.py  config.py  feature_base.py  feature_manager.py  github_update_checker.py  main.py  metrics.py  middleware.py  models.py  uptimerobot.py  websocket.py
src/core_daemon/api_routers/: __init__.py  can.py  config_and_ws.py  entities.py
src/core_daemon/web_ui/: __init__.py
src/core_daemon/web_ui/static/: .keep  __init__.py  test.txt
src/core_daemon/web_ui/static/css/: custom.css  main.css
src/core_daemon/web_ui/static/js/: api.js  app.js  config.js  icons.js  themeDropdown.js  utils.js  wsManager.js
src/core_daemon/web_ui/static/js/views/: canSnifferView.js  homeView.js  lightsView.js  mappingView.js  networkMapView.js  specView.js  unknownPgnsView.js  unmappedView.js
src/core_daemon/web_ui/templates/: __init__.py  index.html
src/rvc_decoder/: __init__.py  decode.py
src/rvc_decoder/config/: 2021_Entegra_Aspire_44R.yml  device_mapping.yml  rvc.json
tests/: __init__.py  conftest.py  test_decode.py
tests/console_client/: __init__.py  test_console.py
tests/core_daemon/: __init__.py  test_app_state.py  test_can_manager.py  test_can_processing.py  test_config.py  test_main.py  test_metrics.py  test_middleware.py  test_models.py  test_websocket.py
tests/core_daemon/api_routers/: test_can.py  test_config_and_ws.py  test_entities.py
tests/integration/: __init__.py  test_api.py
typings/fastapi/: README.md  __init__.pyi
typings/httpx/: __init__.pyi
web_ui/: README.md  package-lock.json  package.json
web_ui/src/: App.tsx  api.ts
